tests/ui/suggestions/raw-name-use-suggestion.stderr
error: expected identifier, found keyword `break`
  --> $DIR/raw-name-use-suggestion.rs:3:12
   |
LL |     pub fn break() {}
   |            ^^^^^ expected identifier, found keyword
   |
help: escape `break` to use it as an identifier
   |
LL |     pub fn r#break() {}
   |            ++

error: expected identifier, found keyword `let`
  --> $DIR/raw-name-use-suggestion.rs:7:10
   |
LL |     foo::let();
   |          ^^^ expected identifier, found keyword
   |
help: escape `let` to use it as an identifier
   |
LL |     foo::r#let();
   |          ++

error[E0425]: cannot find function `r#break` in this scope
  --> $DIR/raw-name-use-suggestion.rs:8:5
   |
LL |     r#break();
   |     ^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
LL + use foo::r#break;
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
